# wide-capture

./: .gitignore  CMakeLists.txt  README.md
scripts/: inject.py
src/: main.cpp  pch.h
src/Camera/: CameraController.cpp  CameraController.h  MatrixMath.h
src/Compute/: ColorConvert.hlsl  ProjectionShader.hlsl  ShaderCompiler.cpp  ShaderCompiler.h
src/Core/: Hooks.cpp  Hooks.h  Logger.h
src/Graphics/: CubemapManager.cpp  CubemapManager.h  DX11Proxy.cpp  DX11Proxy.h  RGBToNV12.hlsl  StateBlock.cpp  StateBlock.h
src/Video/: Encoder.h  FFmpegBackend.cpp  FFmpegBackend.h
